--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^12.6.0",
     "connected-react-router": "^6.8.0",
     "firebase": "^8.2.1",
+    "firebase-functions": "^3.13.1",
     "history": "^4.10.1",
+    "html-react-parser": "^1.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-id-swiper": "^3.0.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -22,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "swiper": "^5.4.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
